--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.0
+  image_picker: ^0.8.4+1
 
 
   # The following adds the Cupertino Icons font to your application.
